# lake_cci_gapfilling

./: .gitignore  README.md  blowup_lake_list.txt  cv_pairs_mapping_manual.md  inspectlog.txt  patch_dineof_cv.patch  pyproject.toml  structure.txt
.ipynb_checkpoints/: README-checkpoint.md  run_update-checkpoint.sh
configs/: exp0.json  exp0.json.bak  exp0_baseline.json  exp0_baseline_fairdineofcv.json  exp1.json  exp1_baseline.json  exp1_baseline_dineof_only.json  exp1_baseline_fixed.json  exp1_dincae_patch.json  exp1_no_ice.json  exp1_no_ice_patch_failed.json  exp1_post_patch.json  exp2.json  exp2.json.bak  exp2_baseline_fulllake.json  exp2_temperature.json  exp3.json  exp3_baseline.json  exp3_ntime3.json  exp3_ntime3_patch.json  exp3_test_pipeline.json  exp4.json  exp4_threads1.json  exp4_threads4.json  exp4_threads8.json  exp5_ntime5_stable_ntimewin.json  exp5_test_gws.json  exp6_ntime7_stable_ntimewin.json  exp6_quick_test.json  exp7_lake133_test.json  exp8_production_test.json  exp999_baseline_testfix.json  exp999_no_ice_piloteofsfilt.json  experiment_settings.json  experiment_settings.json.bak  patch.json  pilot0.json  pilot0b.json  pilot0c.json  pilot0d.json  (+36 more)
dincae_arm/: __init__.py  adapter_in.py  adapter_out.py  contracts.py  runner.py
orchestration/: README.md  bokeh7a7y6jl6.html  bokeh8u9z0tye.html  logs_dincae.err  logs_dincae.out  lswtctl.py  pipeline_structure.md  stage.slurm
scripts/: analyze_amplitude_roughness.py  analyze_insitu_validation.py  assemble_insitu_cv.py  assemble_satellite_cv.py  blowup_detector.py  check_circularity.py  (+64 more)
(+120 files in other folders)
