[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lake-cci-gapfilling"
version = "0.1.0"
description = "Lake CCI LSWT gap-filling pipeline (DINEOF + DINCAE adaptor)"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
dineof_preprocessor = "processors.preprocessor.convert_data:main"
dineof_postprocessor = "processors.postprocessor.post_process:main"
